2008-10-30  David Bateman  <dbateman@free.fr>

	* NEWS: Minor update to document improved indexing code.

2008-10-23  Jason Riedy  <jason@acm.org>

	* configure.in: Take care to use FT2_CFLAGS when checking
	for FTGL headers.

2008-10-22  David Bateman  <dbateman@free.fr>

	* examples/@polynomial: Move examples/polynomial here.
	* examples/@polynomial/Makefile.in: Update for new location.
	* examples/Makefile.in: Ditto.
	* configure.in: Change locate of examples/@polynomial makefile
	in AC_CONFIG_FILES.
	
2008-10-16  David Bateman  <dbateman@free.fr>

	* NEWS: Minor update.

2008-10-15  David Bateman  <dbateman@free.fr>

	* examples/polynomial/display.m, examples/polynomial/double.m,
	examples/polynomial/end.m, examples/polynomial/get.m,
	examples/polynomial/mtimes.m, examples/polynomial/plot.m,
	examples/polynomial/polynomial.m,
	examples/polynomial/polynomial_superiorto.m,
	examples/polynomial/polyval.m, examples/polynomial/set.m,
	examples/polynomial/subsasgn.m, examples/polynomial/subsref.m:
	New example files for a sample OOP class.
	* examples/polynomial/Makefile.in: Add a makefile for this new
	directory
	* examples/Makefile.in: Reference the new subdirectory here.
	* configure.in: Add the new makefile to AC_CONFIG_FILES.
	
2008-10-01  Jaroslav Hajek <highegg@gmail.com>

	* configure.in: Check for sizeof (long double) and randl.

2008-09-30  Jaroslav Hajek <highegg@gmail.com>

	* aclocal.m4 (OCTAVE_FAST_INT_OPS): New macro.
	* configure.in: Call OCTAVE_FAST_INT_OPS

2008-09-08  John W. Eaton  <jwe@octave.org>

	* mkoctfile.cc.in, octave-bug.cc.in, octave-config.cc.in: Style fixes.

2008-09-08  Michael Goffioul  <michael.goffioul@gmail.com>

	* mkoctfile.cc.in, octave-bug.cc.in, octave-config.cc.in: New files.

2008-08-28  David Bateman  <dbateman@free.fr>

	* NEWS: Update for some of the graphics changes
	
2008-08-11  Jaroslav Hajek <highegg@gmail.com>

	* acx_blas_f77_func.m4, acx_lapack.m4: Update macros from
	<http://autoconf-archive.cryp.to/>.
